tests/reference/asr-test_binop3-a67201d.stderr
semantic error: Type mismatch in binary operator; the types must be compatible
 --> tests/errors/test_binop3.py:5:9
  |
5 |     y = complex(5)+100
  |         ^^^^^^^^^^ ^^^ type mismatch (c32 and i32)


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
